<resources>
    <!-- BASIC STRINGS -->
    <string name="app_name" translatable="false">SM Wołczyn</string>
    <string name="ok" translatable="false">OK</string>
    <string name="try_again">Try again</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_reconnect_message">An error with connection occurred, do you want to try again?</string>
    <string name="no_internet_data_message">No network access, the displayed data may be out of date!</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="press_to_exit">Press once again to exit!</string>
    <string name="loading">Loading…</string>
    <string name="hide_bottom_sheet">Hide bottom sheet</string>

    <!-- MF TAU -->
    <string name="cd_spoleto_poster">Spoleto retreat poster</string>
    <string name="cd_close_btn">Click here to close this window</string>
    <string name="spoleto">Spoleto</string>

    <string name="facebook_app_id" translatable="false">126088801386279</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb126088801386279</string>

    <!-- PREFERENCES STRINGS -->
    <string name="preferences">Preferences</string>
    <string name="night_mode_key" translatable="false">night_mode</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Turn on night mode in the app</string>

    <!-- LOGIN STRINGS -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fb">Sign in with Facebook</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create account</string>
    <string name="login_error_empty">Login cannot be empty!</string>
    <string name="password_error_empty">Password cannot be empty!</string>
    <string name="account_not_found_dialog_message">Account not found! Make sure you have an account in the system!</string>
    <string name="account_not_signed_for_event_dialog_message">You are not signed up for the Wołczyn! Logging in to the application is available only to meeting participants!</string>
    <string name="signed_in">Signed in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="token_expired">Your session expired, you have to sign in again!</string>

    <!-- NAVIGATION STRINGS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_anthem">Anthem</string>
    <string name="menu_songbook">Song book</string>
    <string name="menu_group">Group</string>
    <string name="menu_showers">Showers</string>
    <string name="menu_guests">Guests</string>
    <string name="menu_breviary">Breviary</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_signings">Signings</string>
    <string name="menu_departures">Departures</string>
    <string name="menu_map">Map</string>

    <!-- HOME STRINGS -->
    <string name="poster_description">SM Wołczyn 2021 poster</string>
    <string name="decalogue_title">Decalogue of the Meeting</string>
    <string name="decalogue_1">I create a community with all participants of the Meeting.</string>
    <string name="decalogue_2">I smile as often as possible, show kindness to other participants, as well as the inhabitants of Wołczyn.</string>
    <string name="decalogue_3">I try to share with the other what I have and what I can share.</string>
    <string name="decalogue_4">I participate in all points of the program. During their duration I am staying in the closed area of the Meeting. The organizers do not take responsibility for participants outside the Meeting area.</string>
    <string name="decalogue_5">I take care of cleanliness in the city and on the camping site. I throw rubbish into baskets and sacks, segregate waste.</string>
    <string name="decalogue_6">No co-educational night meetings. Girls and boys sleep in separate tents.</string>
    <string name="decalogue_7">No cigarettes, no alcohol, no drugs.</string>
    <string name="decalogue_8">I adhere to the night silence, which is valid from the time indicated by the organizers.</string>
    <string name="decalogue_9">Failure to observe points 6–8 results in the exclusion from the group of participants of the Meeting.</string>
    <string name="decalogue_10">I accept other provisions of the full statute.</string>

    <!-- ARCHIVE STRINGS -->
    <string name="empty_archive">Archive is empty for now!</string>
    <string name="meeting_cover_description">Image of the Meeting</string>
    <string name="no_records_dialog_title">No records yet</string>
    <string name="no_records_dialog_message">No records from this Meeting available yet!</string>

    <!-- SCHEDULE STRINGS -->
    <string name="video_image_description">Link to record of this event</string>
    <string name="place_amphitheatre">Amphitheatre</string>
    <string name="place_white_tent">White Tent</string>
    <string name="place_garden">Garden behind Friars\' house</string>
    <string name="place_campsite">Campsite</string>
    <string name="place_court">Court at the school</string>
    <string name="place_everywhere">Everywhere</string>
    <string name="place_church">Red church</string>
    <string name="type_conference">Conference</string>
    <string name="type_concert">Concert</string>
    <string name="type_mass">Mass</string>
    <string name="type_devotion">Devotion</string>
    <string name="type_organization">Organization</string>
    <string name="type_groups">Groups</string>
    <string name="type_meal">Meal</string>
    <string name="type_breviary">Breviary</string>
    <string name="type_prayer">Prayer</string>
    <string name="type_extra">Extra</string>
    <string name="type_other">Other</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!-- WEATHER STRINGS -->
    <string name="weather_title">Weather - %s</string>
    <string name="empty_weather_list">There is a problem with loading weather data!</string>
    <string name="expand_weather_view">Show weather for this day</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="weather_icon">Icon representing current weather</string>
    <string name="clear_sky">Clear sky</string>
    <string name="few_clouds">Few clouds</string>
    <string name="scattered_clouds">Scattered clouds</string>
    <string name="broken_clouds">Broken clouds</string>
    <string name="shower_rain">Shower rain</string>
    <string name="rain">Rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>

    <!-- ANTHEM STRINGS -->
    <string name="see_on_youtube">See on YouTube</string>
    <string name="anthem_not_available_title">Anthem not available</string>
    <string name="anthem_not_available_msg">This year\'s anthem is not yet available. Check again in some time!</string>

    <!-- SONGBOOK STRINGS -->
    <string name="search">Search</string>
    <string name="song_search_hint">Type title or text…</string>

    <!-- GROUP STRINGS -->
    <string name="groups_not_available">Groups are not available yet!</string>
    <string name="user_photo">Photo of the user</string>
    <string name="user_id" translatable="false">ID: %s</string>
    <string name="user_group">Group number:\n%s</string>
    <string name="bears_dialog_title">You made mischief!</string>
    <string name="bears_dialog_message">It\'s not nice, you got a teddy bear! Be careful! :D</string>
    <string name="group_members_title">Group members:</string>

    <!-- SHOWERS STRINGS -->
    <string name="empty_showers_list">There are no showers assigned to your account yet!</string>
    <string name="showers_title">Your showers hours:</string>

    <!-- GUESTS STRINGS -->
    <string name="conferences">Conferences</string>
    <string name="concerts">Concerts</string>
    <string name="guest_photo_description">Guest\'s photo</string>
    <string name="guest_link_description">Link to guest\'s social media</string>

    <!-- DEPARTURES STRINGS -->
    <string name="empty_departures_list">There are no departures yet!</string>
    <string name="transport_type_image_description">Icon that represent transport type</string>
    <string name="organizer">Organizer: %s</string>
    <string name="send_mail">Send mail…</string>
    <string name="send_mail_error">There is no email client installed!</string>

    <!-- BREVIARY STRINGS -->
    <string name="select_office">Select the Office</string>
    <string name="invitatory">Invitatory</string>
    <string name="office_of_readings">Office of Readings</string>
    <string name="morning_prayer">Morning Prayer</string>
    <string name="midmorning_prayer">Midmorning Prayer</string>
    <string name="midday_prayer">Midday Prayer</string>
    <string name="midafternoon_prayer">Midafternoon Prayer</string>
    <string name="evening_prayer">Evening Prayer</string>
    <string name="night_prayer">Night Prayer</string>
</resources>
