<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/nav_songbook"
            android:icon="@drawable/ic_menu_songbook"
            android:title="@string/menu_songbook" />
        <item
            android:id="@+id/nav_breviary"
            android:icon="@drawable/ic_menu_breviary"
            android:title="@string/menu_breviary" />
    </group>
</menu>
