<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_background"
    android:fillViewport="true"
    tools:context=".view.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_description"
            android:scaleType="fitStart"
            android:src="@drawable/meeting_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/decalogueTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/decalogue_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />

        <TextView
            android:id="@+id/number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="I."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue1"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_1"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogueTitle" />

        <TextView
            android:id="@+id/number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="II."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue2"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_2"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue1" />

        <TextView
            android:id="@+id/number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="III."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue3"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_3"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue2" />

        <TextView
            android:id="@+id/number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="IV."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue4"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_4"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue3" />

        <TextView
            android:id="@+id/number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="V."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue5"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_5"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue4" />

        <TextView
            android:id="@+id/number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="VI."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue6"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_6"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue5" />

        <TextView
            android:id="@+id/number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="VII."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue7"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:minHeight="36dp"
            android:text="@string/decalogue_7"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue6" />

        <TextView
            android:id="@+id/number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="VIII."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue8"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_8"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue7" />

        <TextView
            android:id="@+id/number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="IX."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue9"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_9"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue8" />

        <TextView
            android:id="@+id/number10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="X."
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/decalogue10"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/decalogue10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/decalogue_10"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/app_theme_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number8"
            app:layout_constraintTop_toBottomOf="@+id/decalogue9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
