<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_background"
    android:fillViewport="true"
    tools:context=".view.fragments.ShowersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/showersLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/user_photo"
                tools:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                android:textColor="@color/app_theme_onSurface"
                tools:text="Artur Spórna" />

            <TextView
                android:id="@+id/userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/app_theme_onSurface"
                tools:text="ID: 2137" />

            <TextView
                android:id="@+id/showersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/showers_title"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/app_theme_onSurface" />

            <TextView
                android:id="@+id/showersList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/app_theme_onSurface"
                tools:text="Poniedziałek 22:00-23:00" />
        </LinearLayout>

        <TextView
            android:id="@+id/showersEmptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="16dp"
            android:text="@string/empty_showers_list"
            android:textAlignment="center"
            android:textColor="@color/app_theme_onSurface"
            android:textSize="15sp"
            app:drawableTopCompat="@drawable/ic_empty_showers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>